--- a/listing.html
+++ b/listing.html
@@ -2,11 +2,14 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
+  <!-- Google analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158121186-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-158121186-1');
@@ -19,8 +22,8 @@
   <!-- font awesome  -->
   <script src="https://kit.fontawesome.com/5392481572.js" crossorigin="anonymous"></script>
 
-<!-- google fonts -->
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Poiret+One&display=swap" rel="stylesheet">
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Poiret+One&display=swap" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- local css -->
@@ -37,31 +40,31 @@
 
   <section class="top-nav">
 
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-dark ">
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark ">
 
-    <a class="navbar-brand logo-text" href="">
-  <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
-      </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item mr-2">
-          <a class="nav-link" href="/index.html">Home</a>
-        </li>
-        <li class="nav-item mr-2">
-          <a class="nav-link" href="/gallery.html">Gallery</a>
-        </li>
-        <li class="nav-item mr-2">
-          <a class="nav-link" href="/listing.html">Group List</a>
-        </li>
-      </ul>
+        <a class="navbar-brand logo-text" href="">
+          <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mr-2">
+              <a class="nav-link" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item mr-2">
+              <a class="nav-link" href="/gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item mr-2">
+              <a class="nav-link" href="/listing.html">Group List</a>
+            </li>
+          </ul>
 
+        </div>
+      </nav>
     </div>
-  </nav>
-</div>
 
   </section>
 
