--- a/list.html
+++ b/list.html
@@ -612,7 +612,9 @@
 
 
       <h1 class="cta-heading">Fill this form If your city/region is not in the list</h1>
-      <a class="btn btn-light btn-lg" type="button" href=" https://docs.google.com/forms/d/e/1FAIpQLSdffCCfRyc5Rye18D_YZ9SsnzjHjKt7eXqEAVw4hhSxEPnWUQ/viewform "><i class="fab fa-telegram-plane"> </i> Click here</a>
+      <a class="btn btn-light btn-lg typeform-share button" href="https://fitpanwar.typeform.com/to/GGqpah" data-mode="popup" -moz-osx-font-smoothing:grayscale;" target="_blank"> <i class="fab fa-telegram-plane"></i> Click Here  </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+
+
     </div>
   </section>
 
