--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script src="https://kit.fontawesome.com/5392481572.js" crossorigin="anonymous"></script>
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- local css -->
   <link rel="stylesheet" href="/css/styles.css">
   <!-- google font -->
@@ -36,13 +37,31 @@
 </head>
 
 <body>
+  <!-- navbar -->
+  <nav class="navbar navbar-dark ">
+    <a class="navbar-brand " href="">
+      <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+    </a>
+    <ul class="navbar-nav ">
+      <li class="nav-item ">
+        <a class="nav-link active" href="#"> <i class="fas fa-home"></i></a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="#"> <i class="fas fa-image"></i> </a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="#"> <i class="fas fa-users"></i> </a>
+      </li>
+    </ul>
+  </nav>
+
   <section class="colored-section" id="title">
 
     <div class="container-fluid">
 
 
-      <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark ">
+
+      <!-- <nav class="navbar navbar-expand-lg navbar-dark ">
 
         <a class="navbar-brand logo-text" href="">
           <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
@@ -64,7 +83,7 @@
           </ul>
 
         </div>
-      </nav>
+      </nav> -->
       <!-- below navbar -->
       <div class="row title-container">
         <div class="col-lg-6 heading-container">
@@ -72,7 +91,8 @@
 
 
           <h1 class="title-heading">A community for like minded people</h1>
-          <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i class="fab fa-telegram-plane"></i> Join Now</a>
+          <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i
+              class="fab fa-telegram-plane"></i> Join Now</a>
         </div>
 
         <div class="col-lg-6 ">
@@ -122,7 +142,8 @@
   <section class="colored-section" id="youtube">
     <div class="container-fluid">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/6qsOFy1N1g8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6qsOFy1N1g8" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
@@ -136,7 +157,8 @@
   <section class="white-section" id="cta">
     <div class="container-fluid">
       <h1 class="cta-heading">To join the Avalon Regional groups</h1>
-      <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i class="fab fa-telegram-plane"></i> Click here</a>
+      <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i class="fab fa-telegram-plane"></i>
+        Click here</a>
     </div>
   </section>
 
@@ -154,9 +176,15 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
