--- a/list.html
+++ b/list.html
@@ -471,8 +471,8 @@
             <div class="card-body">
 
 
-              <a class="btn btn-light btn-block btn-lg" type="button" href="http://t.me/avalonpune"><i
-                  class="fab fa-telegram-plane"> </i> Join Now</a>
+              <a class="btn btn-light btn-block btn-lg" type="button"
+                href="https://t.me/joinchat/MXx74haKgqlJ3TyFj_eI2g"><i class="fab fa-telegram-plane"> </i> Join Now</a>
 
             </div>
 
