--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
       <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
     </a>
     <ul class="navbar-nav ">
-      <li class="nav-item ">
+      <li class="nav-item nav-home">
         <a class="nav-link active" href="/index.html"> <i class="fas fa-home"></i></a>
       </li>
       <li class="nav-item ">
         <a class="nav-link" href="/gallery.html"> <i class="fas fa-image"></i> </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item nav-list">
         <a class="nav-link" href="/list.html"> <i class="fas fa-users"></i> </a>
       </li>
     </ul>
