--- a/list.html
+++ b/list.html
@@ -704,6 +704,22 @@
           </div>
         </div>
 
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Vadodara </h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button"
+                href="https://t.me/joinchat/MB7MMB0NRUPxSWt9oMPiXQ"><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
+
+
       </div>
     </div>
 
