--- a/index.html
+++ b/index.html
@@ -61,43 +61,18 @@
 
 
 
-      <!-- <nav class="navbar navbar-expand-lg navbar-dark ">
-
-        <a class="navbar-brand logo-text" href="">
-          <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mr-2">
-              <a class="nav-link" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item mr-2">
-              <a class="nav-link" href="/gallery.html">Gallery</a>
-            </li>
-            <li class="nav-item mr-2">
-              <a class="nav-link" href="/list.html">Group List</a>
-            </li>
-          </ul>
-
-        </div>
-      </nav> -->
-      <!-- below navbar -->
       <div class="row title-container">
+
+        <div class="col-lg-6 ">
+          <img class="title-img" src="images/hero.webp" alt="hero image">
+        </div>
         <div class="col-lg-6 heading-container">
-
-
-
           <h1 class="title-heading">A community for like minded people</h1>
           <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i
               class="fab fa-telegram-plane"></i> Join Now</a>
         </div>
 
-        <div class="col-lg-6 ">
-          <img class="title-img" src="images/avalon-meta.webp" alt="iphone-mockup">
-        </div>
+
       </div>
     </div>
 
