--- a/gallery.html
+++ b/gallery.html
@@ -74,27 +74,27 @@
     <div class="container-fluid gallery">
       <div class="row">
         <a href="gallery/pic-1.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4 pic-container">
-          <img src="gallery/pic-1.jpg" class="img-fluid rounded">
+          <img src="gallery/pic-1.jpg" class="img-fluid rounded gallery-img">
         </a>
         <a href="gallery/pic-2.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4  pic-container">
-          <img src="gallery/pic-2.jpg" class="img-fluid rounded">
+          <img src="gallery/pic-2.jpg" class="img-fluid rounded gallery-img">
         </a>
         <a href="gallery/pic-3.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4 pic-container">
-          <img src="gallery/pic-3.jpg" class="img-fluid rounded">
+          <img src="gallery/pic-3.jpg" class="img-fluid rounded gallery-img">
         </a>
       </div>
       <div class="row">
         <a href="gallery/pic-4.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4 pic-container">
-          <img src="gallery/pic-4.jpg" class="img-fluid rounded">
+          <img src="gallery/pic-4.jpg" class="img-fluid rounded gallery-img">
         </a>
         <a href="gallery/pic-5.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4 pic-container">
-          <img src="gallery/pic-5.jpg" class="img-fluid rounded">
+          <img src="gallery/pic-5.jpg" class="img-fluid rounded gallery-img">
         </a>
         <a href="gallery/pic-6.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4 pic-container">
-          <img src="gallery/pic-6.jpg" class="img-fluid rounded">
+          <img src="gallery/pic-6.jpg" class="img-fluid rounded gallery-img">
         </a>
         <a href="gallery/pic-7.webp" data-toggle="lightbox" data-gallery="gallery" class="col-md-4 pic-container">
-          <img src="gallery/pic-7.webp" class="img-fluid rounded">
+          <img src="gallery/pic-7.webp" class="img-fluid rounded gallery-img">
         </a>
       </div>
     </div>
