--- a/gallery.html
+++ b/gallery.html
@@ -27,43 +27,36 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-dark ">
+    <a class="navbar-brand " href="">
+      <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+    </a>
+    <ul class="navbar-nav ">
+      <li class="nav-item nav-home">
+        <a class="nav-link active" href="/index.html"> <i class="fas fa-home"></i></a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="/gallery.html"> <i class="fas fa-image"></i> </a>
+      </li>
+      <li class="nav-item nav-list">
+        <a class="nav-link" href="/list.html"> <i class="fas fa-users"></i> </a>
+      </li>
+    </ul>
+  </nav>
+
 
   <section class="top-nav">
 
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg navbar-dark ">
-
-        <a class="navbar-brand logo-text" href="">
-          <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mr-2">
-              <a class="nav-link" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item mr-2">
-              <a class="nav-link" href="/gallery.html">Gallery</a>
-            </li>
-            <li class="nav-item mr-2">
-              <a class="nav-link" href="/list.html">Group List</a>
-            </li>
-          </ul>
-
-        </div>
-      </nav>
-    </div>
 
 
-    <section class="title" id="top-title">
+
+    <div class="title" id="top-title">
       <div class="container-fluid">
 
         <h1>Avalon Army Gallery</h1>
         <h2>Pictures taken on various regional meetups</h2>
       </div>
-    </section>
+    </div>
 
 
 
@@ -101,49 +94,49 @@
 
 
 
+  </section>
+  <!-- cta section -->
 
-    <!-- cta section -->
-
-    <section class="cta" id="cta">
-      <div class="container-fluid">
-        <h1 class="cta-heading">To join the Avalon Regional groups</h1>
-        <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i
-            class="fab fa-telegram-plane"></i> Click here</a>
-
-
-        <!-- footer -->
-
-        <footer class="footer">
-          <a href="https://www.instagram.com/avalon_army/"><i class="fab fa-instagram footer-ico"></i></a>
-          <i class="fas fa-envelope footer-ico"></i>
-
-          <p class="footer-text">© Copyright 2020 Avalon Army</p>
-
-        </footer>
-      </div>
-    </section>
+  <section class="cta" id="cta">
+    <div class="container-fluid">
+      <h1 class="cta-heading">To join the Avalon Regional groups</h1>
+      <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i class="fab fa-telegram-plane"></i>
+        Click here</a>
 
 
+      <!-- footer -->
+
+      <footer class="footer">
+        <a href="https://www.instagram.com/avalon_army/"><i class="fab fa-instagram footer-ico"></i></a>
+        <i class="fas fa-envelope footer-ico"></i>
+
+        <p class="footer-text">© Copyright 2020 Avalon Army</p>
+
+      </footer>
+    </div>
+  </section>
 
 
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"
-      integrity="sha256-Y1rRlwTzT5K5hhCBfAFWABD4cU13QGuRN6P5apfWzVs=" crossorigin="anonymous"></script>
 
-    <script src="/script.js" charset="utf-8"></script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"
+    integrity="sha256-Y1rRlwTzT5K5hhCBfAFWABD4cU13QGuRN6P5apfWzVs=" crossorigin="anonymous"></script>
+
+  <script src="/script.js" charset="utf-8"></script>
 </body>
 
 </html>
