--- a/list.html
+++ b/list.html
@@ -44,35 +44,23 @@
 
 <body>
 
-  <section class="top-nav">
+  <nav class="navbar navbar-dark ">
+    <a class="navbar-brand " href="">
+      <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+    </a>
+    <ul class="navbar-nav ">
+      <li class="nav-item nav-home">
+        <a class="nav-link active" href="/index.html"> <i class="fas fa-home"></i></a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="/gallery.html"> <i class="fas fa-image"></i> </a>
+      </li>
+      <li class="nav-item nav-list">
+        <a class="nav-link" href="/list.html"> <i class="fas fa-users"></i> </a>
+      </li>
+    </ul>
+  </nav>
 
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg navbar-dark ">
-
-        <a class="navbar-brand logo-text" href="">
-          <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mr-2">
-              <a class="nav-link" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item mr-2">
-              <a class="nav-link" href="/gallery.html">Gallery</a>
-            </li>
-            <li class="nav-item mr-2">
-              <a class="nav-link" href="/list.html">Group List</a>
-            </li>
-          </ul>
-
-        </div>
-      </nav>
-    </div>
-
-  </section>
 
 
 
@@ -167,7 +155,7 @@
   </section>
 
 
-  <section class="colored-section" id="card">
+  <section class="colored-section list" id="card">
     <div class="container-fluid">
 
 
@@ -729,7 +717,7 @@
 
 
   <!-- footer -->
-  <footer class="black-section" id="footer">
+  <footer class="black-section footer" id="footer">
     <div class="container-fluid">
       <a href="https://www.instagram.com/avalon_army/"><i class="fab fa-instagram footer-ico"></i></a>
       <i class="fas fa-envelope footer-ico"></i>
