--- a/gallery.html
+++ b/gallery.html
@@ -33,10 +33,10 @@
     </a>
     <ul class="navbar-nav ">
       <li class="nav-item nav-home">
-        <a class="nav-link active" href="/index.html"> <i class="fas fa-home"></i></a>
+        <a class="nav-link " href="/index.html"> <i class="fas fa-home"></i></a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="/gallery.html"> <i class="fas fa-image"></i> </a>
+        <a class="nav-link active" href="/gallery.html"> <i class="fas fa-image"></i> </a>
       </li>
       <li class="nav-item nav-list">
         <a class="nav-link" href="/list.html"> <i class="fas fa-users"></i> </a>
