--- a/list.html
+++ b/list.html
@@ -118,10 +118,19 @@
               class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
+
         <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
           <img class=" top-img" src="images/books.png" alt="">
           <h1>Avalon Books</h1>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/bookoholics"><i
+              class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
+
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
+          <img class=" top-img" src="images/music.webp" alt="">
+          <h1>Avalon Music</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/JiaDIkTbKMa_UvDLY8-rAg"><i
               class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
