--- a/list.html
+++ b/list.html
@@ -720,6 +720,20 @@
 
           </div>
         </div>
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Guwahati/Northeast </h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href="https://t.me/avalonghy"><i
+                  class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
 
 
       </div>
