--- a/list.html
+++ b/list.html
@@ -723,7 +723,7 @@
         <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
-              <h3 class="card-title">Avalon Guwahati/Northeast </h3>
+              <h3 class="card-title">Avalon Guwahati </h3>
             </div>
             <div class="card-body">
 
