--- a/list.html
+++ b/list.html
@@ -134,9 +134,9 @@
               class="fab fa-telegram-plane"> </i> Click here</a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
-          <img class=" top-img" src="images/pubg.webp" alt="">
-          <h1>Avalon PUBG</h1>
-          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonpubg"><i
+          <img class=" top-img" src="images/sales.webp" alt="">
+          <h1>Avalon Sales</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonsales"><i
               class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
@@ -165,6 +165,7 @@
       </div>
       <div id="appear" style="display: none;">
         <div class="row">
+
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
             <img class=" top-img" src="images/coding.webp" alt="">
             <h1>Avalon Coding</h1>
@@ -205,6 +206,13 @@
             <img class=" top-img" src="images/avalon.webp" alt="">
             <h1>Avalon Trading</h1>
             <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonstocktrading"><i
+                class="fab fa-telegram-plane"> </i> Click here</a>
+
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
+            <img class=" top-img" src="images/pubg.webp" alt="">
+            <h1>Avalon PUBG</h1>
+            <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonpubg"><i
                 class="fab fa-telegram-plane"> </i> Click here</a>
 
           </div>
