--- a/list.html
+++ b/list.html
@@ -186,6 +186,13 @@
 
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
+            <img class=" top-img" src="images/mechanical.webp" alt="">
+            <h1>Avalon Mechanical</h1>
+            <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonmechanical"><i
+                class="fab fa-telegram-plane"> </i> Click here</a>
+
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
             <img class=" top-img" src="images/wordpress.webp" alt="">
             <h1>Avalon Wordpress</h1>
             <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/Avalonwordpress"><i
