--- a/list.html
+++ b/list.html
@@ -172,6 +172,13 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
+            <img class=" top-img" src="images/avalon.webp" alt="">
+            <h1>Avalon Yoga</h1>
+            <a class="btn btn-light btn-lg top-btn" type="button" href="http://t.me/AvalonYoga"><i
+                class="fab fa-telegram-plane"> </i> Click here</a>
+
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
             <img class=" top-img" src="images/coding.webp" alt="">
             <h1>Avalon Coding</h1>
             <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/AvalonCoding"><i
