--- a/list.html
+++ b/list.html
@@ -222,7 +222,7 @@
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
             <img class=" top-img" src="images/film.webp" alt="">
             <h1>Avalon Filmmaking / Animators</h1>
-            <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalon_filmmaking_animators"><i
+            <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonstudios"><i
                 class="fab fa-telegram-plane"> </i> Click here</a>
 
           </div>
