--- a/list.html
+++ b/list.html
@@ -170,7 +170,13 @@
       </div>
       <div id="appear" style="display: none;">
         <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
+            <img class=" top-img" src="images/anime.gif" alt="">
+            <h1>Avalon Anime</h1>
+            <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonanime"><i
+                class="fab fa-telegram-plane"> </i> Click here</a>
 
+          </div>
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
             <img class=" top-img" src="images/avalon.webp" alt="">
             <h1>Avalon Yoga</h1>
