--- a/list.html
+++ b/list.html
@@ -192,6 +192,13 @@
 
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
+            <img class=" top-img" src="images/avalon.webp" alt="">
+            <h1>Podcast by Avalonians </h1>
+            <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/AvalonPodcasts"><i
+                class="fab fa-telegram-plane"> </i> Click here</a>
+
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
             <img class=" top-img" src="images/coding.webp" alt="">
             <h1>Avalon Coding</h1>
             <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/AvalonCoding"><i
