--- a/list.html
+++ b/list.html
@@ -78,6 +78,14 @@
               class="fab fa-telegram-plane"> </i> Click here</a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
+          <img class=" top-img" src="images/avalon.webp" alt="">
+          <h1>Avalon Discord</h1>
+          <p class="listing-p">A complete collage experience at DISCORD</p>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="http://bit.ly/avalonuniversitydiscord"><i
+              class="fab fa-discord"> </i> Click here</a>
+
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class="top-img" src="images/meta-queries.webp" alt="">
           <h1>Avalon Meta Queries</h1>
           <p class="listing-p">Group dedicated for<strong> Meta related Queries </strong></p>
@@ -154,14 +162,7 @@
               class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
-          <img class=" top-img" src="images/avalon.webp" alt="">
-          <h1>Avalon Discord</h1>
-          <p class="listing-p">A complete collage experience</p>
-          <a class="btn btn-light btn-lg top-btn" type="button" href="http://bit.ly/avalonuniversitydiscord"><i
-              class="fab fa-discord"> </i> Click here</a>
 
-        </div>
 
 
 
